// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SHEET ## NATIVE ## 01 null 1`] = `null`;

exports[`SHEET ## NATIVE ## 02 {} 1`] = `Object {}`;

exports[`SHEET ## NATIVE ## 03 backgroundColor: 'red' 1`] = `
Object {
  "root": Array [
    Object {
      "backgroundColor": "red @sheet.root",
    },
  ],
}
`;

exports[`SHEET ## NATIVE ## 04 merge 1`] = `null`;

exports[`SHEET ## NATIVE ## 05 merge 1`] = `null`;

exports[`SHEET ## NATIVE ## 06 merge 1`] = `Object {}`;

exports[`SHEET ## NATIVE ## 07 merge 1`] = `
Object {
  "label": Array [
    Object {
      "color": "green @sheet.label",
    },
  ],
  "root": Array [
    Object {
      "backgroundColor": "green @sheet.root",
    },
  ],
}
`;

exports[`SHEET ## NATIVE ## 08 merge 1`] = `
Object {
  "label": Array [
    Object {
      "color": "red @sheet.label",
    },
  ],
  "root": Array [
    Object {
      "backgroundColor": "red @sheet.root",
    },
    Object {
      "backgroundColor": "green @sheet.root",
    },
  ],
  "webOnly": Array [
    Object {
      "color": "green @sheet.webOnly",
    },
  ],
}
`;

exports[`SHEET ## NATIVE ## 09 merge 1`] = `
Object {
  "root": Array [
    Object {
      "backgroundColor": "red @sheet.root",
    },
    Object {
      "backgroundColor": "blue @sheet.root",
    },
  ],
}
`;

exports[`SHEET ## NATIVE ## 10 with theme 1`] = `
Object {
  "label": Array [
    Object {
      "backgroundColor": "darkgreen @sheet.label[0]",
      "color": "white @sheet.label[0]",
    },
    Object {
      "margin": "10 @sheet.label[1]",
    },
  ],
  "root": Array [
    Object {
      "backgroundColor": "darkgreen @sheet.root",
    },
  ],
  "webOnly": Array [
    Object {
      "backgroundColor": "blue @theme.secondary.disabled",
      "color": "darkgray @theme.secondary.disabled",
    },
  ],
}
`;

exports[`SHEET ## NATIVE ## 11 sheet source mutated 1`] = `
Object {
  "root": Array [
    Object {
      "backgroundColor": "red",
    },
    false,
  ],
}
`;

exports[`SHEET ## NATIVE ## 11 sheet source mutated 2`] = `
Object {
  "root": Array [
    Object {
      "backgroundColor": "red @sheet.root[0]",
    },
  ],
}
`;

exports[`SHEET ## NATIVE ## 11 sheet source mutated 3`] = `
Object {
  "root": Array [
    Object {
      "backgroundColor": "red @sheet.root[0]",
    },
  ],
}
`;

exports[`SHEET ## NATIVE ## 11 sheet source mutated 4`] = `
Object {
  "root": Array [
    Object {
      "backgroundColor": "red @sheet.root[0]",
    },
  ],
}
`;

exports[`SHEET ## WEB ## 01 null 1`] = `null`;

exports[`SHEET ## WEB ## 02 {} 1`] = `Object {}`;

exports[`SHEET ## WEB ## 03 backgroundColor: 'red' 1`] = `
Object {
  "root": Array [
    Array [
      ".a { background-color:red } @sheet.root",
    ],
  ],
}
`;

exports[`SHEET ## WEB ## 04 merge 1`] = `null`;

exports[`SHEET ## WEB ## 05 merge 1`] = `null`;

exports[`SHEET ## WEB ## 06 merge 1`] = `Object {}`;

exports[`SHEET ## WEB ## 07 merge 1`] = `
Object {
  "label": Array [
    Array [
      ".b { color:green } @sheet.label",
    ],
  ],
  "root": Array [
    Array [
      ".a { background-color:green } @sheet.root",
    ],
  ],
}
`;

exports[`SHEET ## WEB ## 08 merge 1`] = `
Object {
  "label": Array [
    Array [
      ".b { color:red } @sheet.label",
    ],
  ],
  "root": Array [
    Array [
      ".a { background-color:red } @sheet.root",
    ],
    Array [
      ".c { background-color:green } @sheet.root",
    ],
  ],
  "webOnly": Array [
    Array [
      ".d { color:green } @sheet.webOnly",
    ],
  ],
}
`;

exports[`SHEET ## WEB ## 09 merge 1`] = `
Object {
  "root": Array [
    Array [
      ".a { background-color:red } @sheet.root",
    ],
    Array [
      ".b { color:green } @sheet.root/$web",
    ],
    Array [
      ".c { background-color:blue } @sheet.root",
    ],
  ],
}
`;

exports[`SHEET ## WEB ## 10 with theme 1`] = `
Object {
  "label": Array [
    Array [
      ".d { color:white } @sheet.label[0]",
      ".c { background-color:darkgreen } @sheet.label[0]",
    ],
    Array [
      ".e { margin:10px } @sheet.label[1]",
    ],
  ],
  "root": Array [
    Array [
      ".c { background-color:darkgreen } @sheet.root",
    ],
  ],
  "webOnly": Array [
    Array [
      ".a { color:darkgray } @theme.secondary.disabled",
      ".b { background-color:blue } @theme.secondary.disabled",
    ],
  ],
}
`;

exports[`SHEET ## WEB ## 11 sheet source mutated 1`] = `
Object {
  "root": Array [
    Object {
      "backgroundColor": "red",
    },
    [Function],
  ],
}
`;

exports[`SHEET ## WEB ## 11 sheet source mutated 2`] = `
Object {
  "root": Array [
    Array [
      ".a { background-color:red } @sheet.root[0]",
    ],
    Array [
      ".b { color:green } @sheet.root[1]/$web",
    ],
  ],
}
`;

exports[`SHEET ## WEB ## 11 sheet source mutated 3`] = `
Object {
  "root": Array [
    Array [
      ".a { background-color:red } @sheet.root[0]",
    ],
    Array [
      ".b { color:green } @sheet.root[1]/$web",
    ],
  ],
}
`;

exports[`SHEET ## WEB ## 11 sheet source mutated 4`] = `
Object {
  "root": Array [
    Array [
      ".a { background-color:red } @sheet.root[0]",
    ],
    Array [
      ".b { color:green } @sheet.root[1]/$web",
    ],
  ],
}
`;
